--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "@unimodules/core": "^7.1.1",
+    "@react-spring/native": "^9.2.4",
     "expo-font": "^9.2.1",
     "expo-linear-gradient": "^9.2.0",
     "react": "17.0.2",
@@ -23,8 +23,10 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^2.2.0",
+    "react-native-unimodules": "^0.9.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-spring": "^9.2.4",
+    "react-native-web": "^0.11.7",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
