--- a/package.json
+++ b/package.json
@@ -10,35 +10,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/messaging": "^12.4.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "@react-spring/native": "^9.2.4",
-    "expo-font": "^9.2.1",
-    "expo-linear-gradient": "^9.2.0",
-    "react": "17.0.2",
-    "react-native": "0.65.1",
+    "@react-spring/native": "^9.2.3",
+    "i18n-js": "^3.8.0",
+    "react": "17.0.1",
+    "react-native": "0.64.2",
+    "react-native-camera": "^4.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.2.0",
-    "react-native-unimodules": "^0.9.0",
-    "react-native-vector-icons": "^8.1.0",
+    "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.11.7",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/runtime": "^7.15.3",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "babel-jest": "^27.1.0",
-    "eslint": "^7.32.0",
-    "jest": "^27.1.0",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "@babel/core": "^7.12.3",
+    "@babel/runtime": "^7.12.1",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.1",
+    "eslint": "^7.12.1",
+    "jest": "^26.6.1",
+    "metro-react-native-babel-preset": "^0.63.0",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
